--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-outside-click-handler": "^1.3.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
