--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-outside-click-handler": "^1.3.0",
     "react-toastify": "^10.0.6",
     "zustand": "^5.0.0"
