--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "next": "14.2.15",
     "nextjs-toploader": "^3.7.15",
+    "posthog-js": "^1.180.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
